--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Signac stuff
+*.out*
+*.gsd*
+**/workspace/*
+**/.signac/*
+**/signac_project_document.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
